--- a/html_for_JS.html
+++ b/html_for_JS.html
@@ -5,6 +5,6 @@
     <title>JS</title>
 </head>
 <body>
-<script src="Novikov_DZ_JS_Mod_2_4.js"></script>
+<script src="Mod_7_les_1_2.js"></script>
 </body>
 </html>
