--- a/html_for_JS.html
+++ b/html_for_JS.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>JS</title>
+    <script src="JS/jquery-3.6.2.min.js"></script>
 </head>
 <body>
-<script src="Mod_7_les_1_2.js"></script>
+<input type="text" id="name" placeholder="Your name*">
+<!--<script>-->
+<!--    $('#name').on('input', function () {console.log($(this).val());-->
+<!--});-->
+<!--</script>-->
+<!--<script>-->
+<!--    let t = document.getElementById('name');-->
+<!--    t.addEventListener('input', function () {-->
+<!--        console.log(t.value);-->
+<!--    })-->
+<!--</script>-->
+
+    <script src="Mod_8_les_1_1.js"></script>
 </body>
 </html>
